Enhanced the parser. The use of an explicit parser has been mitigated, now the ASTree is built during the parsing and no wasteful tokens are pre-allocated. Lexer's API allow for stream tokenization (step by step through jl_next(...)

--- a/json-tokenizer/Makefile
+++ b/json-tokenizer/Makefile
@@ -1,3 +1,19 @@
+CC = gcc
+CFLAGS = -Wall -Wextra -std=c99 -g -I
+
+OBJ_DIR = obj
+TEST_DIR = tests
+
+SRCS = jsont.c jsonp.c
+OBJS = $(patsubst %.c, $(OBJ_DIR)/%.o, $(SRCS))
+
+TEST_SRCS = $(TEST_DIR)/test_main.c
+TEST_OBJS = $(OBJ_DIR)/test_main.o
+
+TARGET = json_lib
+
+all: $(TARGET)
+
 tokenizer: jsont.c
 	gcc -Wall -Wextra -Og -g jsont.c -o jsont
 
