--- a/json-tokenizer/Makefile
+++ b/json-tokenizer/Makefile
@@ -2,6 +2,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra -std=c99 -g
 
 OBJ_DIR  = obj
+BIN_DIR = bin
 TEST_DIR = tests
 JSON_TEST_DIR = $(TEST_DIR)/json_files_test
 
@@ -13,6 +14,9 @@ TEST_OBJS = $(OBJ_DIR)/test_main.o
 
 all: parser
 
+$(BIN_DIR):
+	mkdir -p $(BIN_DIR)
+
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
@@ -22,19 +26,20 @@ $(OBJ_DIR)/%.o: %.c | $(OBJ_DIR)
 tokenizer: jsont.h
 	$(CC) -Wall -Wextra -Og -g jsont.h -o jsont
 
-parser: jsonp.c jsont.h
-	$(CC) -Wall -Wextra -Og -g -DJSONP_DEMO jsonp.c -o jsonp
+parser: $(BIN_DIR) jsonp.c jsont.h
+	$(CC) -Wall -Wextra -Og -g -DJSONP_DEMO jsonp.c -o $(BIN_DIR)/jsonp
 
 # Test suite: builds the library objects + tests/test_main.c
-test: $(OBJS) $(TEST_OBJS)
-	$(CC) $(CFLAGS) -o test_runner $(TEST_OBJS) $(OBJS)
-	./test_runner
+test: $(BIN_DIR) $(OBJS) $(TEST_OBJS)
+	$(CC) $(CFLAGS) -o $(BIN_DIR)/test_runner $(TEST_OBJS) $(OBJS)
+	$(BIN_DIR)/test_runner
 
 $(OBJ_DIR)/test_main.o: $(TEST_DIR)/test_main.c | $(OBJ_DIR)
 	$(CC) $(CFLAGS) -I. -c $< -o $@
 
 clean:
 	rm -f jsont jsonp test_runner
+	rm -rf $(BIN_DIR)
 	rm -rf $(OBJ_DIR)
 
 .PHONY: all clean test tokenizer parser
